tests/snapshots/regression/collections__error_limit_missing_commas.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/error_limit_missing_commas.flx
exit_code: 1

--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:5
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |     ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:7
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |       ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:9
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |         ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:11
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |           ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:13
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |             ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:15
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |               ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:17
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |                 ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:19
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |                   ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:21
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |                     ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:3
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |   ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:6
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |      ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:9
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |         ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:12
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |            ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:15
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |               ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:18
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |                  ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:21
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |                     ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:24
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |                        ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:27
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |                           ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:30
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |                              ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:3
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |   ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:6
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |      ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:9
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |         ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:12
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |            ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:15
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |               ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:18
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |                  ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:21
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |                     ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:24
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |                        ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:27
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |                           ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:5:30
  |
5 |   21 22 23 24 25 26 27 28 29 30
  |                              ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:3
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |   ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:6
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |      ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:9
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |         ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:12
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |            ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:15
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |               ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:18
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |                  ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:21
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |                     ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:24
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |                        ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:27
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |                           ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:6:30
  |
6 |   31 32 33 34 35 36 37 38 39 40
  |                              ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:3
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |   ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:6
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |      ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:9
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |         ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:12
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |            ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:15
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |               ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:18
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |                  ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:21
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |                     ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:24
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |                        ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:27
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |                           ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:7:30
  |
7 |   41 42 43 44 45 46 47 48 49 50
  |                              ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:8:3
  |
8 |   51 52 53 54 55 56 57 58 59 60
  |   ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.
... and 1 more errors not shown (use --max-errors to increase).

Found 51 errors.
